--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,10 @@ navbar-links:
   Resources:
     - Beautiful Jekyll: "https://beautifuljekyll.com"
     - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: ""
+    - Getting Started: "getstarted"                         
+  Table Demo: "table-demo"       
+           
+
 
 # --- Logo --- #
 
