--- a/_config.yml
+++ b/_config.yml
@@ -19,9 +19,10 @@ navbar-links:
     - Beautiful Jekyll: "https://beautifuljekyll.com"
     - Learn markdown: "https://www.markdowntutorial.com/"
     - Getting Started: "getstarted"                         
+    - Author's home: "http://deanattali.com"
+
   Table Demo: "table-demo"       
            
-
 
 # --- Logo --- #
 
